[tool.poetry]
name = "gpu-tracker-ph"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
requests = "^2.27.1"
loguru = "^0.6.0"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
watchdog = "^2.1.7"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
