[project]
name = "gpu-tracker-ph"
version = "0.2.0"
description = ""
readme = "README.md"
authors = [{ name = "Kenneth V. Domingo", email = "hello@kvd.studio" }]
requires-python = "~=3.13.0"
dependencies = [
    "fastapi[standard]>=0.120.2",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "celery[redis]>=5.5.3",
    "pytest>=8.4.2",
    "redis>=5.2.1",
    "ruff>=0.14.2",
    "watchdog>=6.0.0",
]
